# QualiaGuardian

./: .gitignore  AI_AGENT_SYSTEM_PROMPTS.md  CIRS_VALIDATION_RESULTS.md  COMMIT_MESSAGE.txt  COMPLETE_IMPROVEMENTS_SUMMARY.md  COMPLETE_SYSTEM_SUMMARY.md  COMPREHENSIVE_ANALYSIS_SUMMARY.md  CRITICAL_FIXES_APPLIED.md  DEEP_ANALYSIS_AND_IMPROVEMENTS.md  DEEP_QUALITY_METRICS_ANALYSIS.md  ETES_V2_README.md  EXECUTIVE_SUMMARY_QUALIA_QUALITY.md  FINAL_ANALYSIS_AND_SOLUTION.md  FINAL_ANSWER_QUALITY_IMPROVEMENT.md  FINAL_IMPLEMENTATION_STATUS.md  FINAL_IMPROVEMENTS_SUMMARY.md  FINAL_TEST_RESULTS_AND_IMPROVEMENTS.md  FIX_CI_CHECKS.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_AND_TEST_RESULTS.md  IMPROVEMENTS_SUMMARY.md  METRIC_RESEARCH_AND_REFINEMENT.md  PROVEN_TEST_RESULTS.md  PR_CHECKLIST.md  PR_DESCRIPTION.md  QUALIAGUARDIAN_SELF_IMPROVEMENT.md  QUALIA_QUALITY_COMPLETE.md  QUALIA_QUALITY_INNOVATIONS.md  QUALITY_IMPROVEMENT_ANALYSIS.md  QUALITY_METRICS_IMPROVEMENTS_SUMMARY.md  README.md  SELF_IMPROVEMENT_GUIDE.md  SELF_IMPROVEMENT_SUMMARY.md  SIMPLIFICATION_RECOMMENDATIONS.md  TEST_EXECUTION_SUMMARY.md  TEST_IMPORTANCE_PREDICTION_IMPROVEMENTS.md  UI_UX_IMPROVEMENTS.md  ULTRA_DEEP_REVIEW_AND_REFINEMENTS.md  baseline_analysis.json  demo_complete_system.py  (+23 more)
.github/: PULL_REQUEST_TEMPLATE.md
Qualia-Rust/: BUILD_STATUS.md  Cargo.toml  IMPLEMENTATION_CHECKLIST.md  IMPROVEMENT_PLAN.md  README.md  RUST_CODE_QUALITY_IMPROVEMENTS.md  TRANSLATION_SPEC.md  fix_sensors.sh  setup.sh
Qualia-Rust/config/: chs_thresholds.yml
Qualia-Rust/crates/analytics/: Cargo.toml
Qualia-Rust/crates/analytics/src/: lib.rs  metrics.rs  shapley.rs  trends.rs
Qualia-Rust/crates/cli/: Cargo.toml
Qualia-Rust/crates/cli/src/: database.rs  main.rs  output.rs
Qualia-Rust/crates/cli/src/commands/: analyze.rs  evolve.rs  gamify.rs  history.rs  mod.rs  self_improve.rs
Qualia-Rust/crates/core/: Cargo.toml
Qualia-Rust/crates/core/benches/: betes_bench.rs
Qualia-Rust/crates/core/src/: betes.rs  config.rs  error.rs  lib.rs  osqi.rs  tes.rs  traits.rs  types.rs  verification.rs
Qualia-Rust/crates/core/src/config/: builder.rs
Qualia-Rust/crates/core/src/database/: migrations.rs  mod.rs  models.rs  repository.rs  repository_runtime.rs
Qualia-Rust/crates/core/tests/: integration_test.rs
Qualia-Rust/crates/evolution/: Cargo.toml
Qualia-Rust/crates/evolution/src/: engine.rs  fitness.rs  lib.rs  nsga2.rs  operators.rs  types.rs
Qualia-Rust/crates/sensors/: Cargo.toml
Qualia-Rust/crates/sensors/src/: arch.rs  assertion_iq.rs  behaviour_coverage.rs  chs.rs  flakiness.rs  lib.rs  mutation.rs  security.rs  speed.rs
Qualia-Rust/crates/sensors/src/coverage/: lcov.rs  mod.rs
config/: chs_thresholds.yml  risk_classes.yml
docs/: TEST_IMPORTANCE_FEATURES_GUIDE.md  emt_analysis_report.html
documentation/: EQRA_Implementation_Checklist.md  betes_framework.md  implementation_status_v2.md
dummy_project/: app.py  circ_a.py  circ_b.py  class_test.py  eval_test.py  secrets_test.py  stories.txt  test_app.py
guardian/: __init__.py  agent_interface.py  budget.py  cli.py  history.py  test_guardian_core.py
guardian/actions/: __init__.py  mock_actions.py
guardian/agent/: llm_wrapper.py  optimizer_agent.py
guardian/analysis/: __init__.py  security.py  static.py
guardian/analytics/: __init__.py  incremental_gp.py  metric_stubs.py  mutation_pattern_learning.py  parallel_shapley.py  persistent_cache.py  progressive_approximation.py  shapley.py  shapley_convergence.py  shapley_optimized.py  shapley_parallel_adapter.py  shapley_v2.py  temporal_importance.py  ucb1_thompson_hybrid.py
guardian/cli/: __init__.py  analyzer.py  history_manager.py  history_manager.py.md  output_formatter.py  quality_scoring_handler.py  self_improve_command.py
guardian/core/: __init__.py  actions.py  adaptive_normalization.py  aggregation_methods.py  api.py  betes.py  betes_enhanced.py  cirs.py  classification.py  cqs.py  cqs_automation_improved.py  cqs_enhanced.py  cqs_evolutionary.py  cqs_evolutionary_improved.py  cqs_generator.py  etes.py  information_theoretic_metrics.py  model_selection.py  monte_carlo_uncertainty.py  osqi.py  qualia_quality.py  qualia_quality_final.py  qualia_quality_improved.py  quality_metrics_integrated.py  robust_statistics.py  scheduler.py  sensitivity_analysis.py  temporal_analysis.py  tes.py  trust_models.py  uncertainty_quantification.py
guardian/evolution/: __init__.py  adaptive_emt.py  fitness.py  operators.py  smart_mutator.py  types.py
guardian/metrics/: __init__.py  api.py  evolution_history.py  quality_factor.py
guardian/self_improvement/: __init__.py  auto_fixer.py  console_interface.py  gamified_monitor.py  guardian_optimizer.py  innovation_detector.py  meta_metrics.py  recursive_improver.py  self_analyzer.py
guardian/sensors/: __init__.py  algebraic_connectivity_sensor.py  arch.py  assertion_iq.py  behaviour_coverage.py  chs.py  flakiness.py  homology_drift_sensor.py  mutation.py  shannon_entropy_sensor.py  speed.py
guardian/test_execution/: __init__.py  pytest_runner.py
guardian/utils/: pid_controller.py  test_materializer.py
guardian_ai_tool/: __init__.py
guardian_ai_tool.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
guardian_ai_tool/guardian/: __init__.py
tests/: __init__.py  test_analysis_security.py  test_cli_comprehensive.py  test_cli_dispatch.py  test_core_tes.py  test_etes_v2_comprehensive.py  test_evolution_adaptive_emt.py  test_evolution_adaptive_emt_corrupted.py  test_evolution_engine.py  test_guardian_high_quality.py  test_guardian_quality_improvement.py  test_guardian_self_improvement.py  test_project_analyzer_metrics.py  test_self_improvement_guardian_optimizer.py  test_static_analysis.py  test_static_analysis_comprehensive.py  test_test_execution_pytest_runner.py
tests/agent/: test_llm_wrapper.py
tests/analytics/: __init__.py  test_incremental_gp.py  test_mutation_pattern_learning.py  test_parallel_shapley.py  test_persistent_cache.py  test_shapley_optimized.py  test_temporal_importance.py  test_ucb1_thompson_hybrid.py
tests/bdd/: __init__.py
(+32 files in other folders)
