[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/sensors",
    "crates/analytics",
    "crates/evolution",
    "crates/cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["DarkLightX/Dana Edwards"]
license = "MIT"
repository = "https://github.com/yourusername/qualia-guardian"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
clap = { version = "4.4", features = ["derive"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "migrate"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.dev]
opt-level = 0
debug = true