[package]
name = "qualia-analytics"
version = "0.1.0"
edition = "2021"
authors = ["DarkLightX/Dana Edwards"]

[dependencies]
qualia-core = { path = "../core" }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
ndarray = "0.15"
rayon = "1.8"
statrs = "0.16"
num-traits = "0.2"
rand = "0.8"
serde_json = "1.0"

[dev-dependencies]
approx = "0.5"