[package]
name = "qualia-cli"
version = "0.1.0"
edition = "2021"
authors = ["DarkLightX/Dana Edwards"]

[[bin]]
name = "guardian"
path = "src/main.rs"

[dependencies]
qualia-core = { path = "../core" }
qualia-sensors = { path = "../sensors" }
qualia-analytics = { path = "../analytics" }
qualia-evolution = { path = "../evolution" }
anyhow = "1.0"
clap = { version = "4.4", features = ["derive", "env"] }
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
comfy-table = "7.1"
indicatif = "0.17"
colored = "2.1"
crossterm = "0.27"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "migrate"] }
directories = "5.0"
walkdir = "2.4"
whoami = "1.4"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"