[package]
name = "qualia-core"
version = "0.1.0"
edition = "2021"
authors = ["DarkLightX/Dana Edwards"]

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tracing = "0.1"
once_cell = "1.19"
ordered-float = "4.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
proptest = "1.4"
criterion = "0.5"
quickcheck = "1.0"

[[bench]]
name = "betes_bench"
harness = false

