[package]
name = "qualia-evolution"
version = "0.1.0"
edition = "2021"
authors = ["DarkLightX/Dana Edwards"]

[dependencies]
qualia-core = { path = "../core" }
qualia-sensors = { path = "../sensors" }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
rayon = "1.8"
ordered-float = "4.0"
syn = { version = "2.0", features = ["full", "parsing", "printing"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
criterion = "0.5"
tokio = { version = "1.0", features = ["rt", "macros"] }