[package]
name = "qualia-sensors"
version = "0.1.0"
edition = "2021"
authors = ["DarkLightX/Dana Edwards"]

[dependencies]
qualia-core = { path = "../core" }
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
regex = "1.10"
walkdir = "2.4"
pyo3 = { version = "0.20", features = ["auto-initialize"], optional = true }
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
dashmap = "5.5"
syn = { version = "2.0", features = ["full", "parsing", "visit"] }
chrono = { version = "0.4", features = ["serde"] }
petgraph = "0.6"

[features]
default = []
python = ["pyo3"]

[dev-dependencies]
mockall = "0.12"
tokio-test = "0.4"